2019. 9.24. Added dz_frconv. [app]
2019. 9.24. Added dz_fr2tf. [app]
2019. 9.24. Added dz_tf_ident_fr. [dz_tf, dz_tf_ident_fr]
2019. 9.19. Reflected renaming of dzSys*Create. [test]
2019. 9.19. Added dzTFWriteZTK. [dz_tf]
2019. 9.19. Renamed dzTFScanZTK to dzTFReadZTK. [dz_tf, app]
2019. 9.19. Added dzSysArrayWriteZTK. [dz_sys]
2019. 9.19. Reflected renaming of ZTKEvalKey and ZTKEvalTag. [dz_tf, dz_lin, dz_sys, dz_sys_misc, dz_sys_pid, dz_sys_lag, dz_sys_filter_maf, dz_sys_filter_bw, dz_sys_gen, dz_sys_lin, dz_sys_tf]
2019. 9.18. Added dzTFScanZTK. [dz_tf]
2019. 9.18. Renamed dz_sys_gen to dz_sys_fg and dzSysGen to dzSysFG. [dz_sys_fg]
2019. 9.18. Renamed dzSysArrayFPrint to dzSysArrayFPrintZTK. [dz_sys]
2019. 9.18. Renamed _fprint member in dzSysCom to _fprintZTK and dzSysFPrint to dzSysFPrintZTK. [dz_sys]
2019. 9.18. Added underscore before member functions of dzSysCom. [dz_sys]
2019. 9.18. Renamed dzSysSOLCreateGen to dzSysSOLCreateGeneric. [dz_sys_lag]
2019. 9.18. Renamed dzSysDestroyDefault and dzSysRefreshDefault to dzSysDefaultDestroy and dzSysDefaultRefresh. [dz_sys]
2019. 9.18. Abolished *FScan and associated functions. [dz_tf, dz_lin, dz_sys, dz_sys_misc, dz_sys_pid, dz_sys_lag, dz_sys_filter_maf, dz_sys_filter_bw, dz_sys_gen, dz_sys_lin, dz_sys_tf]
2019. 9.18. Abolished fscan member from dzSys. [dz_sys, dz_sys_misc, dz_sys_pid, dz_sys_lag, dz_sys_filter_maf, dz_sys_filter_bw, dz_sys_gen, dz_sys_lin, dz_sys_tf]
2019. 9.18. Renamed dzSysCreate* to dzSys*Create. [dz_sys_misc, dz_sys_pid, dz_sys_lag, dz_sys_filter_maf, dz_sys_filter_bw, dz_sys_gen, dz_sys_lin, dz_sys_tf]
2019. 9.18. Reimplemented _dzSysComByStr, _dzSysQueryAssign and dzSysRegZTK. [dz_sys]
2019. 9.18. Defined DZ_SYS_COM_ARRAY. [dz_sys]
2019. 9.17. Reimplemented dzSysFPrint and dzSysArrayFPrint. [dz_sys]
2019. 9.17. Added dzSysFromZTK, dzSysRegZTK, dzSysArrayFromZTK and dzSysArrayScanZTK. [dz_sys]