@@ -1,2 +1,0 @@
-num: 0 ( 1 )
-den: 2 ( 1 0 1 )
